advanced/kubernetes/src/app/k8s_litellm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litellm-deployment
  labels:
    app: litellm
spec:
  selector:
    matchLabels:
      app: litellm
  template:
    metadata:
      labels:
        app: litellm
    spec:
      containers:
      - name: litellm
        image: docker.litellm.ai/berriai/litellm:main-stable # it is recommended to fix a version generally
        args:
          - "--config"
          - "/app/proxy_server_config.yaml"
        ports:
        - containerPort: 4000
        volumeMounts:
        - name: config-volume
          mountPath: /app/proxy_server_config.yaml
          subPath: config.yaml
        - name: key-volume
          mountPath: /app/oci_api_key.pem
          subPath: key_file
      volumes:
        - name: config-volume
          configMap:
            name: litellm-config-file
        - name: key-volume
          secret:
            secretName: litellm-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: litellm-service
spec:
  selector:
    app: litellm
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: litellm-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2   
    # nginx.ingress.kubernetes.io/affinity: "cookie"   
    # nginx.ingress.kubernetes.io/session-cookie-path: "/"    
spec:
  ingressClassName: nginx    
  rules:
    - http:    
        paths:
          - path: /litellm(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: litellm-service
                port:
                  number: 4000
